--- a/payment.service
+++ b/payment.service
@@ -4,11 +4,11 @@ Description=Payment Service
 [Service]
 User=root
 WorkingDirectory=/app
-Environment=CART_HOST=cart-dev.gehana26.online
+Environment=CART_HOST=cart-dev.gehana26.fun
 Environment=CART_PORT=8080
-Environment=USER_HOST=user-dev.gehana26.online
+Environment=USER_HOST=user-dev.gehana26.fun
 Environment=USER_PORT=8080
-Environment=AMQP_HOST=rabbitmq-dev.gehana26.online
+Environment=AMQP_HOST=rabbitmq-dev.gehana26.fun
 Environment=AMQP_USER=roboshop
 Environment=AMQP_PASS=rabbitmq_appuser_password
 
