--- a/roboshop.conf
+++ b/roboshop.conf
@@ -4,11 +4,11 @@ expires 5s;
 root   /usr/share/nginx/html;
 try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://catalogue-dev.gehana26.online:8080/; }
-location /api/user/ { proxy_pass http://user-dev.gehana26.online:8080/; }
-location /api/cart/ { proxy_pass http://cart-dev.gehana26.online:8080/; }
-location /api/shipping/ { proxy_pass http://shipping-dev.gehana26.online:8080/; }
-location /api/payment/ { proxy_pass http://payment-dev.gehana26.online:8080/; }
+location /api/catalogue/ { proxy_pass http://catalogue-dev.gehana26.fun:8080/; }
+location /api/user/ { proxy_pass http://user-dev.gehana26.fun:8080/; }
+location /api/cart/ { proxy_pass http://cart-dev.gehana26.fun:8080/; }
+location /api/shipping/ { proxy_pass http://shipping-dev.gehana26.fun:8080/; }
+location /api/payment/ { proxy_pass http://payment-dev.gehana26.fun:8080/; }
 
 location /health {
 stub_status on;
