--- a/shipping.service
+++ b/shipping.service
@@ -3,8 +3,8 @@ Description=Shipping Service
 
 [Service]
 User=roboshop
-Environment=CART_ENDPOINT=cart-dev.gehana26.online:8080
-Environment=DB_HOST=mysql-dev.gehana26.online
+Environment=CART_ENDPOINT=cart-dev.gehana26.fun:8080
+Environment=DB_HOST=mysql-dev.gehana26.fun
 ExecStart=/bin/java -jar /app/shipping.jar
 SyslogIdentifier=shipping
 
